[package]
name = "scantailor-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
quick-xml = { version = "0.31.0", features = ["serialize", "serde"] }
serde = { version = "1.0.190", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_with = { version = "3.4.0", features = ["base64", "chrono"] }
validator = { version = "0.16.1", features = ["derive"] }
